# tg-auto-forwarding

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  QA_CHECKLIST.md  README.md  RELEASE_NOTES.md  docker-compose.yaml  pyproject.toml  requirements.txt
docker/: docker-entrypoint.sh
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  consoleUiVersion.js  dashboard-layout.css  dashboardApp.js  main.ts  styles.css
hdhive/: __init__.py  auto_unlock.py  hdhive.py  hdhive_site_login_checkin.py  help.md  unlock_core.py
src/tg_forwarder/: __init__.py  __main__.py  cli.py  config.py  control_service.py  dashboard_actions.py  dispatch_queue.py  dispatcher.py  env_utils.py  filters.py  forwarder.py  hdhive_checkin.py  hdhive_cookie_refresh.py  hdhive_resource_resolve.py  hdhive_unlock_cli.py  hdhive_unlock_core.py  log_buffer.py  logging_utils.py  message_index.py  monitoring.py  startup_notifier.py  supervisor.py  telegram_clients.py  user_messages.py  web_auth.py  web_login.py  webapp.py  worker.py
src/tg_forwarder/modules/: __init__.py  loader.py  registry.py  ui_runtime.py
src/tg_forwarder/web/: __init__.py
src/tg_forwarder/web/static/: app.js  index.html  styles.css
src/tg_forwarder/web/static/assets/: index-Cj_1cBLO.css  index-D-_ZfqsI.js
tgph/: RULE_EXAMPLE.md  __init__.py  __main__.py  cli.py  cli_report.py  content.py  dispatch_mode.py  extract.py  fetch.py  match.py  preview.py  proxy.py  resolve.py
